# DynamicGap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ankit_density.patch  dg_plugin.xml  package.xml
cfg/: ControlParameters.cfg  EstimationParameters.cfg  Parameters.cfg  dg.cfg
config/: common_costmap_params.yaml  custom_rosconsole.conf  dgap.rviz  dynamicgap_local_planner_holonomic_params.yaml  dynamicgap_local_planner_params.yaml  dynamicgap_local_planner_params_holonomic.yaml  local_costmap_params.yaml  rosconsole.conf  teb_local_planner_holonomic_params.yaml
docs/: pgConfig-usage.dox
include/dynamic_gap/: DynamicGapPlanner.h  Planner.h  TimeKeeper.h  cart_model.h  dynamic_gap.h  dynamicgap_config.h  gap.h  gap_associator.h  gap_detector.h  gap_feasibility.h  gap_manip.h  gap_trajectory_generator.h  gap_utils.h  goal_selector.h  helper.h  mp_model.h  planner.h  rotating_frame_cartesian_kalman_filter.h  trajectory_controller.h  trajectory_follower.h  trajectory_scoring.h  visualization.h
launch/: agent_global_path_manager.launch  agent_spawn_follow_global_path.launch  delete_robot.launch  dyn_teb_controller.launch  dynamic_gap_gazebo_controller.launch  dynamic_gap_holonomic_controller.launch  dynamic_gap_nonholonomic_controller.launch  dynamic_gap_nonholonomic_controller_gazebo.launch  dynamic_gapfar_holonomic_controller.launch  dynamic_gapfar_nonholonomic_controller.launch  egoteb_holonomic_controller.launch  gap_tracker.launch  hardware_test.launch  hardware_test_dgap.launch  hardware_test_dwa.launch  move_base.launch  move_base_obst_namespace.launch  move_base_virtual_namespace.launch  replace_robot.launch  rosbag_test_dgap.launch  spawn_robot.launch  stdr_campus_laser_world.launch  stdr_campus_world.launch  stdr_dense_world.launch  stdr_empty_laser_world.launch  stdr_empty_world.launch  stdr_hallway_world.launch  stdr_office_world.launch  stdr_sector_laser_world.launch  stdr_sector_world.launch  teb_holonomic_controller.launch
maps/: empty_room_20x20.pgm  empty_room_20x20_white.pgm  empty_room_20x20_white.yaml  model_tracking.pgm  model_tracking.yaml  sector_stereo_world.yaml
matlab/: ROS_MPC.m  main.m  mpc_dyngap.m  test.m
ml_gap_velocity/: results.txt
ml_gap_velocity/data/: dgap_26-05-05_09-00-53.csv  dgap_26-05-05_09-03.csv  dgap_26-05-05_09-19-38.csv  dgap_26-05-05_10-40-58.csv  dgap_26-05-05_10-44-36.csv  dgap_26-05-05_13-04-27.csv  dgap_26-05-05_13-08-51.csv  dgap_26-05-05_13-09-56.csv  dgap_26-05-05_13-16-31.csv  dgap_26-05-05_21-55-27.csv  simplified_gap_velocity_data.csv
ml_gap_velocity/models/: empty_10runs_seq10__data_dgap_26-05-05_13-25-12_gap_gru.pt  empty_10runs_seq10__data_dgap_26-05-05_13-25-12_norm_stats.json  empty_10runs_seq10__data_dgap_26-05-05_13-25-12_train_config.json  empty_10runs_seq10__data_dgap_26-05-05_13-25-12_train_history.csv  gap_gru.pt  norm_stats.json  seq10_1000epoch__data_empty_0to10_100runs_gap_gru.pt  seq10_1000epoch__data_empty_0to10_100runs_norm_stats.json  seq10_1000epoch__data_empty_0to10_100runs_train_config.json  seq10_1000epoch__data_empty_0to10_50runs_gap_gru.pt  seq10_1000epoch__data_empty_0to10_50runs_norm_stats.json  seq10_1000epoch__data_empty_0to10_50runs_train_config.json  seq10_600epoch__data_empty_0to10_50runs_gap_gru.pt  seq10_600epoch__data_empty_0to10_50runs_norm_stats.json  seq10_600epoch__data_empty_0to10_50runs_train_config.json  seq10_600epoch__data_empty_0to10_50runs_train_history.csv  state_only_seq10__data_dgap_26-05-05_10-40-58_gap_gru.pt  state_only_seq10__data_dgap_26-05-05_10-40-58_norm_stats.json  state_only_seq10__data_dgap_26-05-05_10-40-58_train_config.json  state_only_seq10__data_dgap_26-05-05_10-40-58_train_history.csv
ml_gap_velocity/plots/: .~lock.seq10_1000epoch__data_empty_10to20_10runs_all_predictions.csv#
ml_gap_velocity/scripts/: gru_gap_feature_node.py  gru_gap_velocity_node.py  test_gap_gru.py  train_gap_gru.py
msg/: GapFeatureObservation.msg  GapFeaturePrediction.msg  GapPointObservation.msg  GapVelocityPrediction.msg
params/: common_costmap_params.yaml  dyn_teb_costmap_common_params.yaml  dyn_teb_costmap_converter_params.yaml  dyn_teb_global_costmap_params.yaml  dyn_teb_local_costmap_params.yaml  dyn_teb_local_planner_params.yaml  dynamic_gap_rosconsole.conf  dynamic_gap_turtlebot_params.yaml  dynamicgap_local_planner_holonomic_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_holonomic_params.yaml
rviz/: arena.rviz  delete_arena.rviz  dgap.rviz  not_working_arena.rviz  unused_arena.rviz
scripts/: fmm_distance_node.py  follow_global_path.py  vis_teb_obsts.py
src/: DynamicGapPlanner.cpp  Planner.cpp  TimeKeeper.cpp  cart_model.cpp  delete_Planner.cpp  dynamic_gap.cpp  dynamicgap_config.cpp  gap_associator.cpp  gap_detector.cpp  gap_feasibility.cpp  gap_manip.cpp  gap_trajectory_generator.cpp  gap_utils.cpp  goal_selector.cpp  mp_model.cpp  planner.cpp  rot_frame_kf.cpp  rotating_frame_cartesian_kalman_filter.cpp  test.py  trajectory_controller.cpp  trajectory_follower.cpp  trajectory_scoring.cpp  visualization.cpp
src/config/: DynamicGapConfig.cpp
src/estimation/: gap_associator.cpp  rot_frame_kf.cpp  staticEstimator.cpp
src/gap_association/: Associator.cpp  GapAssociator.cpp  GapPointAssociator.cpp
src/gap_detection/: GapDetector.cpp
src/gap_estimation/: Associator.cpp  GapAssociator.cpp  PerfectEstimator.cpp  RotatingFrameCartesianKalmanFilter.cpp  StaticEstimator.cpp
src/gap_feasibility/: GapFeasibilityChecker.cpp
src/gap_propagation/: GapPropagator.cpp
src/global_plan_management/: GlobalPlanManager.cpp
src/goal_management/: GoalSelector.cpp
src/scan_processing/: DynamicScanPropagator.cpp  StaticScanSeparator.cpp
src/scan_separation/: StaticScanSeparator.cpp
src/trajectory_evaluation/: TrajectoryEvaluator.cpp
src/trajectory_generation/: GapGoalPlacer.cpp  GapManipulator.cpp  GapTrajectoryGenerator.cpp  NavigableGapGenerator.cpp  UngapTrajectoryGenerator.cpp  gap_trajectory_generator.cpp
src/trajectory_scoring/: TrajectoryScorer.cpp
src/utils/: Utils.cpp  gap_utils.cpp
(+77 files in other folders)
