<?xml version="1.0"?>
<package format="2">
  <name>dynamic_gap</name>
  <version>0.0.0</version>
  <description>The dynamic_gap package</description>

  <maintainer email="mass@gatech.edu">Max Asselmeier</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>base_local_planner</depend>
  <!-- <depend>dynamic_reconfigure</depend> -->
  <!-- <depend>egocircle</depend> -->
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>nav_msgs</depend> -->
  <!-- <depend>sensor_msgs</depend> -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <!-- <depend>std_msgs</depend> -->
  <depend>pluginlib</depend>
  <depend>nav_core</depend>
  <depend>mod_tb_scan</depend>
  <!-- <depend>pips_trajectory_msgs</depend> -->
  <!-- <depend>message_generation</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nav_core plugin="${prefix}/dg_plugin.xml" />
  </export>
</package>
